# libMp4Muxer

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/winstars/launcher/chat/codec/mideamuxer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Mp4Muxer.c  mp4record.c
app/src/main/java/com/winstars/launcher/chat/codec/: AudioEncoder.java  MainActivity.java  Mp4v2Helper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/com/winstars/launcher/chat/codec/mideamuxer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
